--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Energie overzicht</h1>    
-    <div id="uitvoer">het script werkt nog niet</div>
+    <div id="uitvoer"></div>
     <script src="huisdata.js"></script>
     <script src="datauitvoer.js"></script>
 
