--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="author" content="Zarko Djurdjevic">
     <title>Object uitlezen</title>
+    <link rel="stylesheet" href="stijl.css">
 </head>
 <body>
     <h1>Energie overzicht</h1>    
     <div id="uitvoer"></div>
     <script src="huisdata.js"></script>
     <script src="datauitvoer.js"></script>
-
+    
 </body>
 </html>
