--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="stijl.css">
 </head>
 <body>
-    <h1>Energie overzicht</h1>    
+    <h1>Energie overzicht</h1>
+    <div id="uitvoerkop">
+        <div class="tijd">datum en tijd</div>
+        <div>buiten</div>
+        <div>binnen</div>
+        <div class="gw">gewenst</div>
+        <div>CV ketel</div>
+        <div>kamer</div>
+        <div>buiten</div>    
+    </div>    
     <div id="uitvoer"></div>
     <script src="huisdata.js"></script>
     <script src="datauitvoer.js"></script>
